refactorizar componentes de elm y usarlos en text_elem y to-do

--- a/notebooks/elm/buttons.ipynb
+++ b/notebooks/elm/buttons.ipynb
@@ -48,23 +48,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4554fbf-4254-457e-bc83-bd543b7f1816",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "8f806d14-7422-4c95-b9a6-1136f67fcd99",
    "metadata": {},
    "outputs": [],
    "source": [
     "def onClick(msg):\n",
-    "    global app\n",
     "\n",
     "    def update_(w):\n",
+    "        global app\n",
     "        app.call_update(msg)\n",
     "    \n",
     "    def setup(widget):\n",
@@ -74,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "48e62709-c0e0-472b-9d0b-2a8db02789a3",
    "metadata": {},
    "outputs": [],
@@ -83,7 +75,7 @@
     "    return w.VBox(y)\n",
     "\n",
     "def text(x):\n",
-    "    return w.Text(str(x))\n",
+    "    return w.Text(x)\n",
     "\n",
     "def button(setup, text):\n",
     "    b=w.Button(description=text)\n",
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -130,14 +122,14 @@
     "def view(model):\n",
     "    return div([], [\n",
     "    button(onClick(increment),\"+\"),\n",
-    "    div([],[text(model)]),\n",
+    "    div([],[text(str(model))]),\n",
     "    button(onClick(decrement),\"-\"),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -147,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b1f9df1061540e79a6a3650dd5bebdb",
+       "model_id": "408420305d284edcae927c7eb7caa9b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aee75c1-f12e-422d-ba67-d804fb06678d",
+   "id": "1709953d-59a7-45a2-9b57-aeabf3eeab01",
    "metadata": {},
    "outputs": [],
    "source": []
