--- a/notebooks/elm/text_fields.ipynb
+++ b/notebooks/elm/text_fields.ipynb
@@ -15,56 +15,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as w"
+    "import ipywidgets as w\n",
+    "import traitlets as t\n",
+    "from elm import App, onInput, input, text, div\n",
+    "from dataclasses import dataclass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2e50b9c5-bee8-4020-a75f-b95f0f507f75",
+   "id": "7c826366-9c54-4b19-a25d-22846397c25c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = w.Text(\"s\")"
+    "class Model(t.HasTraits):\n",
+    "    value = t.Unicode()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6516038-f4b8-425f-b80c-38e627090ce4",
+   "id": "aa70d47d-56bf-4703-bc28-afe4692d8f60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_sub(w):\n",
-    "    display(w)"
+    "# @dataclass\n",
+    "class Msg:\n",
+    "    pass\n",
+    "\n",
+    "@dataclass\n",
+    "class Change(Msg):\n",
+    "    newContent : str"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7d6301b4-fffa-4c78-95c4-a2ca15dc1ef3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i.observe(on_sub,\"value\")\n",
-    "i.continuous_update = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa70d47d-56bf-4703-bc28-afe4692d8f60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7ab7c2bf-5ef5-40f5-9acd-5eb62346c784",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def init():\n",
+    "    return Model(\"\")\n",
+    "\n",
+    "def update(msg, model):\n",
+    "    match msg:\n",
+    "        case Change(content):\n",
+    "            model.value = content\n",
+    "    return model\n",
+    "\n",
+    "def view(model):\n",
+    "    return div([], \n",
+    "               [input(onInput(lambda x: Change(x)), model.value,\"Text to reverse:\" ) ,\n",
+    "                text(\"\".join(reversed(model.value))),\n",
+    "               ])"
+   ]
   },
   {
    "cell_type": "code",
@@ -75,30 +80,22 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e85a2059e17c414a9ab153bf656bf0c0",
+       "model_id": "83ec1a59d5fb4950a086ef039184fd3a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value='s', continuous_update=False)"
+       "Box(children=(VBox(children=(Text(value='', placeholder='Text to reverse:'), Text(value='', disabled=True))),)…"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "i"
+    "app = App(init,update,view)\n",
+    "app"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c80d2ad-b8ca-47f4-8ab1-ff1b701add46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
