agregar funcionalidad de remover elementos

--- a/notebooks/elm/to-do.ipynb
+++ b/notebooks/elm/to-do.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7e1ce5c7-8c63-41fe-87ab-01efd3b4e8a4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1fe2bcaf-2284-4177-8965-8b16e5a7ae54",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "5ab331fc-4457-42ba-abdb-9dd81b0f476f",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -92,19 +92,24 @@
     "        case ChangeInputText(text):\n",
     "            model.inputText = text\n",
     "            return model\n",
-    "            \n",
+    "\n",
+    "\n",
+    "def viewTodo(index, element):\n",
+    "    return w.HBox([text(f\"{element.text}\"), \n",
+    "                   button(onClick(RemoveElement(index)),\"Remove\")])\n",
+    "\n",
     "def view(model:Model):\n",
     "    return div([], [\n",
     "    text(\"Hello\"),\n",
-    "    input(onInput(lambda x:ChangeInputText(x)),model.inputText, \"New item\"),\n",
-    "    div([],[text(e.text) for e in model.elements]),\n",
-    "    button(onClick(AddElement()),\"Add\")\n",
+    "    input(onInput(lambda x:ChangeInputText(x)), model.inputText, \"New item\"),\n",
+    "    div([],[viewTodo(i,e) for i,e in enumerate(model.elements)]),\n",
+    "    button(onClick(AddElement()),\"Add\"),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -114,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c3b380976c2404e9dab7a8c6daf9cb5",
+       "model_id": "3051bda4e1bf48788c4b7b933eb9ff8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,6 +141,14 @@
    "source": [
     "app"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "879be7ba-c466-4fea-956c-0b51069dfbff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
