--- a/notebooks/elm/to-do.ipynb
+++ b/notebooks/elm/to-do.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "030e2183-5a4f-4486-974f-254e8b5d6ab2",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7e1ce5c7-8c63-41fe-87ab-01efd3b4e8a4",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1fe2bcaf-2284-4177-8965-8b16e5a7ae54",
    "metadata": {},
    "outputs": [],
@@ -44,13 +44,13 @@
     "\n",
     "class Model(t.HasTraits):\n",
     "\n",
-    "    elements = t.List()\n",
+    "    elements = t.List(t.Instance(Element))\n",
     "    inputText = t.Unicode()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ab331fc-4457-42ba-abdb-9dd81b0f476f",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "def view(model:Model):\n",
     "    return div([], [\n",
     "    text(\"Hello\"),\n",
-    "    input(onInput(lambda x:ChangeInputText(x)), model.inputText, \"New item\"),\n",
+    "    input(onInput(lambda x:ChangeInputText(x), continuous_update=False), model.inputText, \"New item\"),\n",
     "    div([],[viewTodo(i,e) for i,e in enumerate(model.elements)]),\n",
     "    button(onClick(AddElement()),\"Add\"),\n",
     "    ])"
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -119,25 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3051bda4e1bf48788c4b7b933eb9ff8b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(VBox(children=(Text(value='Hello', disabled=True), Text(value='', placeholder='New item'), VBox(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "app"
    ]
