completar las implementaciones de elm-mutable

--- a/notebooks/elm-mutable/buttons.ipynb
+++ b/notebooks/elm-mutable/buttons.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -68,14 +68,14 @@
     "def view(app, model):\n",
     "    return div([], [\n",
     "    button(onClick(app,increment),\"+\"),\n",
-    "    div([],[text(model,\"value\")]),\n",
+    "    div([],[text(model,\"value\", lambda change: str(change.new))]),\n",
     "    button(onClick(app,decrement),\"-\"),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -85,19 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "115433ad78e1423489a56c1cafc099b1",
+       "model_id": "835e46a6e244489aa4628e36607f3db5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Box(children=(VBox(children=(Button(description='+', style=ButtonStyle()), VBox(children=(Text(value=''),)), B…"
+       "Box(children=(VBox(children=(Button(description='+', style=ButtonStyle()), VBox(children=(Text(value='', disab…"
       ]
      },
      "metadata": {},
