--- a/notebooks/elm-mutable/forms.ipynb
+++ b/notebooks/elm-mutable/forms.ipynb
@@ -18,7 +18,7 @@
     "import ipywidgets as w\n",
     "import traitlets as t\n",
     "from dataclasses import dataclass\n",
-    "from elm import App, onInput, div,text,input,password"
+    "from elm import App, onInput, div,text,input,password,linkInput"
    ]
   },
   {
@@ -96,9 +96,9 @@
     "def view(app, model):\n",
     "    return div([],\n",
     "              [\n",
-    "              input(onInput(app,lambda x: Name(x),continuous_update=False),model.name,\"Name\"),\n",
-    "              password(onInput(app,lambda x: Password(x),continuous_update=False),model.password,\"Password\"),\n",
-    "              password(onInput(app, lambda x: PasswordAgain(x),continuous_update=False),model.passwordAgain,\"PasswordAgain\"),\n",
+    "              input(linkInput(model,\"name\"),\"Name\"),\n",
+    "              password(linkInput(model,\"password\"),\"Password\"),\n",
+    "              password(linkInput(model,\"passwordAgain\"),\"PasswordAgain\"),\n",
     "              viewValidation(model)    \n",
     "              ]\n",
     "              )"
@@ -113,12 +113,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62a7eb1a4ce44632b7e30c89e1f77ef9",
+       "model_id": "c3ab32de24fd4a47bf04d1ab57837ab0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Box(children=(VBox(children=(Text(value='', continuous_update=False, placeholder='Name'), Password(continuous_…"
+       "Box(children=(VBox(children=(Text(value='', placeholder='Name'), Password(placeholder='Password'), Password(pl…"
       ]
      },
      "metadata": {},
@@ -129,6 +129,14 @@
     "app = App(init=init,update=update,view=view)\n",
     "app"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4efbbb39-3fec-4680-a3ce-c37861242d54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
