--- a/notebooks/elm-mutable/text_fields.ipynb
+++ b/notebooks/elm-mutable/text_fields.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import ipywidgets as w\n",
     "import traitlets as t\n",
-    "from elm import App, onInput, input, text, div\n",
+    "from elm import App, onInput, input, text, div, linkInput\n",
     "from dataclasses import dataclass"
    ]
   },
@@ -67,7 +67,7 @@
     "\n",
     "def view(app,model):\n",
     "    return div([], \n",
-    "               [input(onInput(app, lambda x: Change(x)), model.value,\"Text to reverse:\" ) ,\n",
+    "               [input(linkInput(model,\"value\"), \"Text to reverse:\" ) ,\n",
     "                text(model, \"value\", lambda change:\"\".join(reversed(change.new))),\n",
     "               ])"
    ]
@@ -81,12 +81,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bec44d58092d45acb4e1b03712037aa8",
+       "model_id": "1626b9d78d1c4e1db6fdf319d1fd4c85",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Box(children=(VBox(children=(Text(value='', placeholder='Text to reverse:'), Text(value=''))),))"
+       "Box(children=(VBox(children=(Text(value='', placeholder='Text to reverse:'), Text(value='', disabled=True))),)…"
       ]
      },
      "metadata": {},
