--- a/notebooks/elm-mutable/to-do.ipynb
+++ b/notebooks/elm-mutable/to-do.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elm import App, div, input, button, onClick, onInput,text"
+    "from elm import App, div, input, button, onClick, linkInput,text"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "5ab331fc-4457-42ba-abdb-9dd81b0f476f",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,10 @@
     "class AddElement(Msg):\n",
     "\n",
     "    def __call__(self, model):\n",
-    "        print(\"ADD:\",model.elements, model.inputText)\n",
     "        elements = list(model.elements)\n",
     "        elements.append(Element(model.inputText))\n",
     "        model.elements = elements\n",
     "        model.inputText = \"\"\n",
-    "        print(\"CLOSING/ADD:\",model.elements, model.inputText)\n",
     "        return model\n",
     "\n",
     "@dataclass\n",
@@ -77,20 +75,12 @@
     "        elements = list(model.elements)\n",
     "        elements.pop(self.index)\n",
     "        model.elements = elements\n",
-    "        return model\n",
-    "\n",
-    "@dataclass\n",
-    "class ChangeInputText(Msg):\n",
-    "    text : str\n",
-    "\n",
-    "    def __call__(self, model):\n",
-    "        model.inputText = self.text\n",
     "        return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -105,7 +95,6 @@
     "    td = w.VBox()\n",
     "\n",
     "    def on_change(change):\n",
-    "        print(change)\n",
     "        td.children = [ w.HBox([w.Text(f\"{element.text}\",disabled=True), \n",
     "                       button(onClick(app, RemoveElement(index)),\"Remove\")]) \n",
     "                       for index, element in enumerate(change.new)]\n",
@@ -116,7 +105,7 @@
     "def view(app,model:Model):\n",
     "    return div([], [\n",
     "    w.Text(\"Hello\"),\n",
-    "    input(onInput(app, lambda x:ChangeInputText(x), continuous_update=False), model.inputText, \"New item\"),\n",
+    "    input(linkInput(model,\"inputText\"), \"New item\"),\n",
     "    div([],[viewTodo(app,model)]),\n",
     "    button(onClick(app,AddElement()),\"Add\"),\n",
     "    ])"
@@ -124,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -134,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66f5d74fa7f74a2e8e4e6e8db72866b0",
+       "model_id": "1f89a01871f74b9f87aa40cfd29a1a07",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Box(children=(VBox(children=(Text(value='Hello'), Text(value='', continuous_update=False, placeholder='New ite…"
+       "Box(children=(VBox(children=(Text(value='Hello'), Text(value='', placeholder='New item'), VBox(children=(VBox(…"
       ]
      },
      "metadata": {},
