ultimos cambios en elm ultimos cambios en elm

--- a/notebooks/elm-mutable/to-do.ipynb
+++ b/notebooks/elm-mutable/to-do.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ac6baed9-6865-4000-b028-049ed7ce7fcf",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
     "    def on_change(change):\n",
     "        td.children = [ w.HBox([w.Text(f\"{element.text}\",disabled=True), \n",
     "                       button(onClick(app, RemoveElement(index)),\"Remove\")]) \n",
-    "                       for index, element in enumerate(change.new)]\n",
+    "                       for index, element in enumerate(change.new) ]\n",
     "                \n",
     "    model.observe(on_change, \"elements\")\n",
     "    return td\n",
@@ -106,14 +106,14 @@
     "    return div([], [\n",
     "    w.Text(\"Hello\"),\n",
     "    input(linkInput(model,\"inputText\"), \"New item\"),\n",
-    "    div([],[viewTodo(app,model)]),\n",
     "    button(onClick(app,AddElement()),\"Add\"),\n",
+    "    div([],[viewTodo(app,model)]),\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "31ca14b4-ea90-40fe-87ef-7017b375d926",
    "metadata": {},
    "outputs": [],
@@ -123,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "f8b70472-198a-49fe-a737-ffd4862ad7e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f89a01871f74b9f87aa40cfd29a1a07",
+       "model_id": "91797c08a3884e1faf1b1938d945edcf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Box(children=(VBox(children=(Text(value='Hello'), Text(value='', placeholder='New item'), VBox(children=(VBox(…"
+       "Box(children=(VBox(children=(Text(value='Hello'), Text(value='', placeholder='New item'), Button(description='…"
       ]
      },
      "metadata": {},
@@ -145,6 +145,14 @@
    "source": [
     "app"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ce68d2-5858-4384-8524-788ce26245c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
