--- a/notebooks/elm/forms.ipynb
+++ b/notebooks/elm/forms.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "68739620-69d2-459e-8bda-5d3219654095",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9db189b2-6306-4793-9b29-a8885e2fd159",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85679d20-6461-4ec4-8266-b461dcb5873b",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4e8caf38-d5dc-44ed-9f54-69364e405382",
    "metadata": {},
    "outputs": [],
@@ -96,10 +96,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "74d93341-782e-4406-84a0-761dc088d1b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d4a1c1c3d62b489691d208be015743a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(VBox(children=(Text(value='', continuous_update=False, placeholder='Name'), Password(continuous_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "app = App(init=init,update=update,view=view)\n",
     "app"
